user-visible changes while the day to day changes are in the git logs.


=======================================================================
        ___  _____ ____
__   __/ _ \|___  | ___|
\ \ / / | | |  / /|___ \          (unamed)
 \ V /| |_| | / /  ___) |
  \_/  \___(_)_/  |____/          (unreleased)

General:
 * Support gettext msgctxt (GitHub's #627) [gemmaro]

AsciiDoc:
 * Fix line numbers and order when include macro is inside of lists
   (GitHub's #610 and #611) [Oliver Rahner]
 * Fix table header recognition pattern and context [Jean-Noël Avila]

TexInfo:
 * Partial support of @documentencoding (hardcoded to the english value) and
   @documentlanguage (to be manually translated by the humans in the PO file)
   (GitHub's #597 and #598) [Fat-Zer, vindicatorr and mquinson]

XML:
 * Accept boolean attibutes even if they are the only attribute of their tag
   (GitHub's #608) [mquinson]

Documentation:
 * Fix some typos [Rafael Fontenelle]
 * Fix more typos (GitHub's #593) [Helge Kreutzmann]

Translations:
 * Updated: Chinese (simplified), thanks Kevin Zang and marvel at flowers.
 * Updated: Croatian, thanks Milo Ivir.
 * Updated: Dutch, thanks Frans Spiesschaert and Mehdi Amiri.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks 2tama3.
 * Updated: Portuguese, thanks Américo Monteiro.
 * Updated: Portuguese (Brazil), thanks Rafael Fontenelle.
 * Updated: Romanian, thanks Remus-Gabriel Chelu.
 * Updated: Russian, thanks Alex Karabanov.
 * Updated: Serbian, thanks Ivan Pesic.
 * Updated: Spanish, thanks Adolfo Jayme Barrientos.
 * Updated: Swedish, thanks Daniel Nylander and Anders Jonsson.
 * Updated: Tamil, thanks தமிழ்நேரம்.
 * Updated: Ukrainian, thanks Yuri Chornoivan.

=======================================================================
        ___  _____ _  _
__   __/ _ \|___  | || |
\ \ / / | | |  / /| || |_         The Simone Weil release.
 \ V /| |_| | / / |__   _|
  \_/  \___(_)_/     |_|          July 12. 2025.
