@@ -11,6 +11,8 @@ __   __/ _ \|___  | ___|
 
 General:
  * Support gettext msgctxt (GitHub's #627) [gemmaro]
+   See Locale::Po4a::Po(3pm) for more details, and the example in the
+   test suite: t/context.t for an usage in practice.
 
 AsciiDoc:
  * Fix line numbers and order when include macro is inside of lists
